--- a/PRJ/gomsu-client/src/index.html
+++ b/PRJ/gomsu-client/src/index.html
@@ -31,6 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <app-root></app-root>
